--- a/tmall/css/common.css
+++ b/tmall/css/common.css
@@ -6,6 +6,12 @@ body{
     font: 12px/1.5 tahoma,arial,"\5b8b\4f53";
     -webkit-font-smoothing: antialiased; 
 }
+a{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
 
 .wrapper{
     width:1230px;
