--- a/tmall/css/index.css
+++ b/tmall/css/index.css
@@ -1,11 +1,13 @@
 #header{
     height: 32px;
+    line-height: 32px;
     background: #a9180a;
-    border: 1px solid #a9180a;
+    border-bottom: 1px solid #a9180a;
 }
 .header-login{
     height: 32px;
-    line-height: 32px;
+    /* line-height: 32px; */
+    float: left;
 }
 .header-login span,.header-login a{
     color: #fff;
@@ -14,4 +16,14 @@
 .header-login a{
     text-decoration: none;
     padding: 0 10px 0 20px;
+}
+.header-list{
+    float: right;
+}
+.herder-list > li{
+    float: left;
+    padding: 0 14px 0 10px;
+}
+.hesder-list > li > a{
+    color: #fff;
 }
