--- a/tmall/css/index.css
+++ b/tmall/css/index.css
@@ -20,10 +20,10 @@
 .header-list{
     float: right;
 }
-.herder-list > li{
+.header-list > li{
     float: left;
     padding: 0 14px 0 10px;
 }
-.hesder-list > li > a{
+.header-list > li > a{
     color: #fff;
 }
