--- a/tmall/css/common.css
+++ b/tmall/css/common.css
@@ -19,3 +19,15 @@ ul{
     /* background: #000ff0;
     height: 32px; */
 }
+.list-arrow::after{
+    content: '';
+    width: 0;
+    height: 0;
+    border: 3px solid transparent;
+    border-top: 3px solid #bbb;
+    font-size: 0;
+    line-height: 0;
+    position: absolute;
+    right:8px;
+    top:15px;
+}
