--- a/tmall/css/index.css
+++ b/tmall/css/index.css
@@ -27,3 +27,33 @@
 .header-list > li > a{
     color: #fff;
 }
+.list-arrow{
+    position: relative;
+}
+.sub-list{
+    position: absolute;
+    left: 0px;
+    top: 32px;
+    background: #fff;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-top: none;
+    display: none;
+}
+.sub-list-tb{
+    width: 72px;
+    line-height: 20px;
+}
+.sub-list > li > a{
+    color: #999;
+}
+.list-arrow:hover .sub-list{
+    display: block;
+}
+.list-arrow:hover{
+    background: #fff;
+}
+.list-arrow:hover > a{
+    color: #ff0036;
+    text-decoration: underline;
+}
