--- a/tmall/css/index.css
+++ b/tmall/css/index.css
@@ -43,6 +43,7 @@
 .sub-list-tb{
     width: 72px;
     line-height: 20px;
+    z-index: 5;
 }
 .sub-list > li > a{
     color: #999;
@@ -64,4 +65,108 @@
 .sub-list .list-tb-baby:hover{
     color: #ff0036;
     text-decoration: underline;
+}
+.myshoppingcar{
+    font-size: 10px;
+    color: #fff;
+
+}
+.myphone{
+    font-size: 10px;
+    color: #fff;
+}
+.mycaidan{
+    font-size: 10px;
+    color: #fff;
+
+}
+/* head结束 */
+/*search开始 */
+.logobox{
+    overflow: hidden;
+}
+.logo{
+    width: 240px;
+    height: 130px;
+    float: left;
+}
+.search-box{
+    float: left;
+    margin-left: 96px;
+    margin-top: 38px;
+    overflow: hidden;/*溢出隐藏*/
+}
+.search-content{
+    width: 623px;
+    height: 36px;
+    border: 2px solid #ff0036;
+
+}
+.search-input{
+    width: 491px;
+    height: 36px;
+    border: none;
+    outline: none;
+    text-indent: 5px;
+    float: left;
+
+}
+.search-btn{
+    width: 132px;
+    height: 36px;
+    background: #ff0036;
+    border: none;
+    float: left;
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+    letter-spacing: 5px;
+}
+.search-list li{
+    float: left;
+    margin-top: 3px;
+    padding:0 12px;
+    position: relative;
+    left:-13px;
+}
+.search-list li::after{
+    content: '';
+    width: 1px;
+    height: 15px;
+    background: #999999;
+    position: absolute;
+    left: 0;
+    top: 4px;
+}
+.search-list li a{
+    color: #999;
+    font-size: 14px;
+
+}
+.search-list li.list-hot a{
+    color: #ff0036;
+}
+/* 搜索结束 */
+/* nav开始 */
+.nav{
+    padding-left: 200px;
+    width: 1030px;
+    overflow: hidden;
+}
+.nav li{
+    float: left;
+}
+.nav li img{
+    width: 100px;
+    height: 30px;
+    margin-top: 3px;
+}
+.nav a{
+    color: #333;
+    font-size: 16px;
+    font-weight: 500;
+    display: block;
+    height: 35px;
+    line-height: 35px;
+    padding: 0 8px;
 }
