--- a/tmall/css/index.css
+++ b/tmall/css/index.css
@@ -170,3 +170,84 @@
     line-height: 35px;
     padding: 0 8px;
 }
+
+/* 轮播图开始 */
+.slide-box{
+    height: 500px;
+    background: #ccc;
+}
+.slide-box .wrapper{
+    height: 500px;
+    background: #0000ff;
+    position: relative;
+}
+.menu-box{
+    position: absolute;
+    top: -36px;
+    left: 0px;
+    background: rgba(0,0,0,0.55);
+    width: 200px;
+    height: 536px;
+}
+.img-box{
+    height: 500px;
+    overflow: hidden;
+}
+.img-box img{
+    width: 1230px;
+}
+.menu-title{
+    color: #fff;
+    height: 35px;
+    line-height: 35px;
+    background: #ff0036;
+    font-size: 16px;
+    font-weight: 700;
+}
+.menu-title .icon-caidan{
+    margin: 0 0 0 14px;
+    font-size: 16px;
+}
+.slide-box{
+    border-top: 2px solid #ff0036;
+}
+.main-list{
+    height: 31.2px;
+    line-height: 31.2px;
+}
+.main-list > a{
+    color: #fff;
+    font-size: 14px;
+}
+.main-list .icon-gouwucheman{
+    font-size: 16px;
+}
+.list-icon{
+    margin:0 4px 0 14px;
+    opacity: 0.5;
+}
+.main-list:hover{
+    background: #fff;
+}
+.main-list .list-line,.main-list .list-icon,.main-list > a
+{
+    color: #fff;
+}
+.main-list:hover .list-line,.main-list:hover .list-icon,.main-list:hover > a
+{
+    color:#e54077;
+}
+.main-list:hover .list-icon{
+    opacity: 1;
+}
+.menu-sub-list{
+    width: 800px;
+    height: 500px;
+    background: #fff;
+    position: absolute;
+    left: 200px;
+    top: 0px;
+}
+.main-list-box{
+    position: relative;
+}
