--- a/tmall/css/index.css
+++ b/tmall/css/index.css
@@ -241,13 +241,102 @@
     opacity: 1;
 }
 .menu-sub-list{
-    width: 800px;
+    width: 900px;
     height: 500px;
     background: #fff;
     position: absolute;
     left: 200px;
     top: 0px;
+    display: none;
 }
 .main-list-box{
     position: relative;
+}
+.sub-list-left{
+    width: 640px;
+    height: 500px;
+    background: #ff0000;
+    float: left;
+    padding: 19px 30px;
+    box-sizing: border-box;
+}
+.sub-list-right{
+    width: 210px;
+    height: 500px;
+    background: #FAFAFA;
+    padding: 10px;
+    float: right;
+    box-sizing: border-box;
+}
+.sub-list-ringt img{
+    width:70px;
+}
+.main-list:hover .menu-sub-list{
+    display:block;
+}
+.left-content{
+    height: 100px;
+}
+.content{
+    float: left;
+    font-size: 16px;
+    font-weight: 700;
+}
+.sub-content{
+    float: left;
+}
+/* 品牌开始 */
+.brand-box{
+    margin-top: 34px;
+}
+.brand-list{
+    width: 485px;
+    float: left;
+    margin-left: 13px;
+}
+.brand-list img{
+    width: 485px;
+}
+.brand-list img:hover{
+    opacity: 0.7;
+}
+.brand-list-1{
+    width: 234px;
+    margin-left: 0;
+}
+.brand-list-1 img{
+    width: 234px;
+}
+.brand-head{
+    height: 55px;
+    line-height: 55px;
+    background: #fff;
+}
+body{
+    background: #f5f5f5;
+}
+.brand-head-cn{
+    font-size: 18px;
+    color: #333;
+    font-weight: bold;
+    margin-left: 10px;
+}
+.brand-head-en{
+    font-size: 14px;
+    color:#333;
+    font-weight: bold;
+    font-family: "Microsoft YaHei",SimSun,'\5b8b\4f53',sans-serif;
+}
+.brand-head-more{
+    float: right;
+    background: url(../images/more.png) no-repeat right center;
+    background-size: 18px 18px;
+    width: 56px;
+    margin-right: 10px;
+    color: #666;
+    font-size: 16px;
+}
+.brand-list-1 .brand-head-more{
+    width: 18px;
+    height: 55px;
 }
